--- a/posts/ml/timeseries/timeseries.ipynb
+++ b/posts/ml/timeseries/timeseries.ipynb
@@ -10653,6 +10653,8 @@
     "\n",
     "## VAR\n",
     "\n",
+    "## VECM\n",
+    "\n",
     "\n",
     "# 6. Traditional ML Models\n",
     "\n",
